--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="landing">
         <!-- Navbar -->
         
-    <nav class="navbar navbar-expand-lg navbar-light text-white " id="navbarforlanding">
+    <nav class="navbar navbar-expand-lg navbar-light text-white fixed-top " id="navbarforlanding">
         <div class="container-fluid ">
           <a class="navbar-brand text-white" href="#">Dilan </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
