--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <img class="m-1" width="40"
                         src="./image/kisspng-blue-diagram-angle-area-linkedin-5ab077139134e4.7732814515215142595948.png">
                 </a>
-                <a href="https://www.facebook.com/profile.php?id=100026611425697" target="_blank">
+                <a href="https://www.facebook.com" target="_blank">
                     <img class="m-1" width="40"
                         src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Facebook_icon_2013.svg">
                 </a>
@@ -193,7 +193,7 @@
 
             <div class="row">
                 <div class="col-md-6 my-4">
-                    <div style="width: 100%">
+                    <div class="w-100%">
                         <iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
                             marginwidth="0"
                             src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Daldale+(Portfolio)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
