--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <!-- start of contact -->
             <h3 class="text-center my-5">Contact</h3>
             <div class="d-flex flex-wrap justify-content-center mb-4">
-                <a href="https://www.linkedin.com/in/dilan-dhakal-75b46b266/" target="_blank">
+                <a href="https://www.linkedin.com" target="_blank">
                     <img class="m-1" width="40"
                         src="./image/kisspng-blue-diagram-angle-area-linkedin-5ab077139134e4.7732814515215142595948.png">
                 </a>
@@ -185,7 +185,7 @@
                     <img class="m-1" width="40"
                         src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Facebook_icon_2013.svg">
                 </a>
-                <a href="" target="_blank">
+                <a href="https://www.instagram.com" target="_blank">
                     <img class="m-1" width="40"
                         src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg">
                 </a>
